--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,2 +1,5 @@
-site_name: My Docs
-site_url: https://example.com/
+site_name: 'PyPyo Friends'
+theme:
+  name: 'rtd-dropdown'
+  custom_dir: custom_theme/
+  
