--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,20 @@
 site_name: 'PyPyo Friends'
+site_url: https://pypyofriends.netlify.app/
+
+nav:
+  - Home: index.md
+  - Num과 행렬연산: num.md
+  - Polon과 데이터프레임: polon.md
+  - Plot.ly와 시각화: plotlyat.md
+  - Oncy와 컴퓨터 비젼: oncy.md
+  - Wilber와 크롤링: wilber.md
+  - Tenso, Kris와 딥러닝: tenso_kris.md
+  - Pluto와 백엔드 가속: pluto.md
+
 theme:
   name: 'rtd-dropdown'
   custom_dir: custom_theme/
 extra_css:
   - css/font.css
+markdown_extensions:
+  - admonition
